docs: add comprehensive docstrings for earth model functions

--- a/designs/single_core_1000mm2_1830/main.ipynb
+++ b/designs/single_core_1000mm2_1830/main.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +354,9 @@
    ],
    "source": [
     "f = 10.0 .^ range(0, stop=6, length=10)\n",
-    "earth_params = EarthModel(f, 100, 10, 1, t=5, EHEMformulation=EnforceLayer(-1))\n",
-    "add_earth_layer!(earth_params, 200, 15, 1, t=Inf)\n",
+    "earth_params = EarthModel(f, 100, 10, 1)\n",
+    "# earth_params.EHEMformulation=EnforceLayer(-1)\n",
+    "# add_earth_layer!(earth_params, 200, 15, 1, t=Inf)\n",
     "earth_params"
    ]
   }
