feat: add tutorials documentation and restructure project dependencies; remove examples file

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -38,9 +38,10 @@ DOI = {10.3390/app14198982}
   @INPROCEEDINGS{yang2008gmr,
   author = {Yang, Y. and Fortin, S. and Ma, J. and Dawalibi, F. P.},
   title = {GMR of Stranded Multizone Conductors},
-  booktitle = {Proceedings of the 606th Power and Energy Systems Conference},
+  booktitle = {The 4th IASTED Asian Conference on Power and Energy Systems (AsiaPES)},
   year = {2008},
   keywords = {GMR, multizone, stranded conductor, strand pattern, current density, frequency dependence},
+  note = {{https://www.actapress.com/Abstract.aspx?paperId=33058}}
 }
 
 @INPROCEEDINGS{916943,
