fix: update theme in custom.js and improve documentation structure in various files

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -41,7 +41,7 @@ DOI = {10.3390/app14198982}
   booktitle = {The 4th IASTED Asian Conference on Power and Energy Systems (AsiaPES)},
   year = {2008},
   keywords = {GMR, multizone, stranded conductor, strand pattern, current density, frequency dependence},
-  note = {{https://www.actapress.com/Abstract.aspx?paperId=33058}}
+  note = {Available: {https://www.actapress.com/Abstract.aspx?paperId=33058}}
 }
 
 @INPROCEEDINGS{916943,
@@ -77,4 +77,57 @@ DOI = {10.3390/app14198982}
   keywords={Impedance;Admittance;Coaxial cables;Transient analysis;Earth;Conductors;Voltage;Equations;Dielectric losses;Underwater cables},
   doi={10.1109/TPAS.1980.319718}}
 
+  @techreport{cigre345,
+  author       = {{CIGRE Working Group B2.12}},
+  title        = {Alternating Current (AC) Resistance of Helically Stranded Conductors},
+  institution  = {CIGRE},
+  year         = {2008},
+  month        = {April},
+  number       = {345},
+  type         = {Technical Brochure},
+  note          = {Available: {https://www.e-cigre.org/publications/detail/345-alternating-current-ac-resistance-of-helically-stranded-conductors.html}}}
+
+  @techreport{cigre531,
+  author       = {{CIGRE Working Group B1.30}},
+  title        = {Cable Systems Electrical Characteristics},
+  institution  = {CIGRE},
+  year         = {2013},
+  month        = {April},
+  number       = {531},
+  type         = {Technical Brochure},
+  note          = {Available: {https://www.e-cigre.org/publications/detail/531-cable-systems-electrical-characteristics.html}}}
+
+@book{rosa1908,
+  title     = {The self and mutual-inductances of linear conductors},
+  author    = {Rosa, E. B.},
+  year      = {1908},
+  publisher = {National Bureau of Standards},
+  volume = {4},
+  number = {2},
+  issn   = {0096-8579},
+  doi   = {10.6028/bulletin.088},
+}
+
+@ARTICLE{Karmokar2025,
+	author = {Karmokar, T. and Popov, M.},
+	title = {Enhanced Modelling and Parameter Determination of HVDC Cables Using Practice-Oriented Methodology},
+	year = {2025},
+	journal = {CIGRE Science and Engineering},
+	volume = {2025-February},
+	number = {36},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85218793172&partnerID=40&md5=415867c192cfa930318607b68cd8cd69},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+}
+
+@book{grover1981inductance,
+  title={Inductance Calculations: Working Formulas and Tables},
+  author={Grover, F.W. and Instrument Society of America},
+  isbn={9780876645574},
+  lccn={lc82126260},
+  series={Dover books on engineering and engineering physics},
+  year={1981},
+  publisher={Instrument Society of America}
+}
 
