fix: update references in bibliography and improve function documentation for clarity

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -55,6 +55,17 @@ DOI = {10.3390/app14198982}
   keywords={Power cable insulation},
   doi={10.1109/PESW.2001.916943}}
 
+@ARTICLE{1458878,
+  author={Gustavsen, B. and Martinez, J.A. and Durbak, D.},
+  journal={IEEE Transactions on Power Delivery}, 
+  title={Parameter determination for modeling system transients-Part II: Insulated cables}, 
+  year={2005},
+  volume={20},
+  number={3},
+  pages={2045-2050},
+  keywords={Cable insulation;Cables;Magnetic materials;Conducting materials;Material properties;Semiconductor materials;Frequency;Impedance;Shunt (electrical);Admittance;Insulated cables;modeling;power system transients;simulation},
+  doi={10.1109/TPWRD.2005.848774}}
+
   @ARTICLE{5743045,
   author={Gudmundsdottir, Unnur Stella and Gustavsen, Bjørn and Bak, Claus Leth and Wiechowski, Wojciech},
   journal={IEEE Transactions on Power Delivery}, 
