fix: update function names for consistency, enhance documentation, and add new dependencies

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -7,21 +7,20 @@
   number={2},
   pages={961-969},
   keywords={Impedance;Earth;Conductors;Admittance;Electromagnetic transients;Power system transients;Underground power cables;Electromagnetic propagation;Integral equations;Power cables;Earth return admittance;earth return impedance;electromagnetic transients;power cable modeling},
-  doi={10.1109/TPWRD.2009.2034797}}
-
+  doi={10.1109/TPWRD.2009.2034797}
+}
 
 @Article{app14198982,
-AUTHOR = {Riba, Jordi-Roger},
-TITLE = {The Role of AC Resistance of Bare Stranded Conductors for Developing Dynamic Line Rating Approaches},
-JOURNAL = {Applied Sciences},
-VOLUME = {14},
-YEAR = {2024},
-NUMBER = {19},
-ARTICLE-NUMBER = {8982},
-URL = {https://www.mdpi.com/2076-3417/14/19/8982},
-ISSN = {2076-3417},
-ABSTRACT = {Overhead transmission line conductors are usually helically stranded. The current-carrying section is made of aluminum and/or aluminum alloys. Several factors affect their electrical resistance, such as the conductivity of the conductor material, the cross-sectional area, the lay length of the different layers of aluminum, and the presence of a steel core used to increase the mechanical strength of the conductor. The direct current (DC) and alternating current (AC) resistances per unit length of stranded conductors are different due to the effect of the eddy currents. In steel-reinforced conductors, there are other effects, such as the transformer effect due to the magnetization of the steel core, which make the AC resistance dependent on the current. Operating temperature also has an important effect on electrical resistance. Resistive losses are the main source of heating in transmission line conductors, so their temperature rise is highly dominated by such power losses, making it critical to know the value of the AC resistance per unit length when applying dynamic line rating (DLR) methods. They are of great interest especially in congested lines, as by applying DLR approaches it is possible to utilize the full line capacity of the line. This paper highlights the difficulty of accurately calculating the electrical resistance of helically stranded conductors, especially those with a magnetic core, and the importance of accurate measurements for the development of conductor models and DLR approaches.},
-DOI = {10.3390/app14198982}
+  AUTHOR = {Riba, Jordi-Roger},
+  TITLE = {The Role of AC Resistance of Bare Stranded Conductors for Developing Dynamic Line Rating Approaches},
+  JOURNAL = {Applied Sciences},
+  VOLUME = {14},
+  YEAR = {2024},
+  NUMBER = {19},
+  ARTICLE-NUMBER = {8982},
+  URL = {https://www.mdpi.com/2076-3417/14/19/8982},
+  ISSN = {2076-3417},
+  DOI = {10.3390/app14198982}
 }
 
 @ARTICLE{6521501,
@@ -33,15 +32,16 @@ DOI = {10.3390/app14198982}
   number={3},
   pages={1252-1262},
   keywords={Conductors;Resistance;Inductance;Current density;Wires;Solids;Equations;Current density;eddy currents;hysteresis;internal inductance;power loss;proximity effect;resistance;skin effect;transformer effect},
-  doi={10.1109/TPWRD.2012.2213617}}
+  doi={10.1109/TPWRD.2012.2213617}
+}
 
-  @INPROCEEDINGS{yang2008gmr,
+@INPROCEEDINGS{yang2008gmr,
   author = {Yang, Y. and Fortin, S. and Ma, J. and Dawalibi, F. P.},
   title = {GMR of Stranded Multizone Conductors},
   booktitle = {The 4th IASTED Asian Conference on Power and Energy Systems (AsiaPES)},
   year = {2008},
   keywords = {GMR, multizone, stranded conductor, strand pattern, current density, frequency dependence},
-  note = {Available: {https://www.actapress.com/Abstract.aspx?paperId=33058}}
+  note = {[Link]({https://www.actapress.com/Abstract.aspx?paperId=33058})}
 }
 
 @INPROCEEDINGS{916943,
@@ -53,7 +53,8 @@ DOI = {10.3390/app14198982}
   number={},
   pages={718-723 vol.2},
   keywords={Power cable insulation},
-  doi={10.1109/PESW.2001.916943}}
+  doi={10.1109/PESW.2001.916943}
+}
 
 @ARTICLE{1458878,
   author={Gustavsen, B. and Martinez, J.A. and Durbak, D.},
@@ -64,9 +65,10 @@ DOI = {10.3390/app14198982}
   number={3},
   pages={2045-2050},
   keywords={Cable insulation;Cables;Magnetic materials;Conducting materials;Material properties;Semiconductor materials;Frequency;Impedance;Shunt (electrical);Admittance;Insulated cables;modeling;power system transients;simulation},
-  doi={10.1109/TPWRD.2005.848774}}
+  doi={10.1109/TPWRD.2005.848774}
+}
 
-  @ARTICLE{5743045,
+@ARTICLE{5743045,
   author={Gudmundsdottir, Unnur Stella and Gustavsen, Bjørn and Bak, Claus Leth and Wiechowski, Wojciech},
   journal={IEEE Transactions on Power Delivery}, 
   title={Field Test and Simulation of a 400-kV Cross-Bonded Cable System}, 
@@ -75,9 +77,10 @@ DOI = {10.3390/app14198982}
   number={3},
   pages={1403-1410},
   keywords={Power cables;Cable shielding;Current measurement;Voltage measurement;Conductors;Bonding;Grounding;Insulated cables;model accuracy;modeling;power system transients;proximity effect;simulation},
-  doi={10.1109/TPWRD.2010.2084600}}
+  doi={10.1109/TPWRD.2010.2084600}
+}
 
-  @ARTICLE{4113884,
+@ARTICLE{4113884,
   author={Ametani, A.},
   journal={IEEE Transactions on Power Apparatus and Systems}, 
   title={A General Formulation of Impedance and Admittance of Cables}, 
@@ -86,9 +89,10 @@ DOI = {10.3390/app14198982}
   number={3},
   pages={902-910},
   keywords={Impedance;Admittance;Coaxial cables;Transient analysis;Earth;Conductors;Voltage;Equations;Dielectric losses;Underwater cables},
-  doi={10.1109/TPAS.1980.319718}}
+  doi={10.1109/TPAS.1980.319718}
+}
 
-  @techreport{cigre345,
+@techreport{cigre345,
   author       = {{CIGRE Working Group B2.12}},
   title        = {Alternating Current (AC) Resistance of Helically Stranded Conductors},
   institution  = {CIGRE},
@@ -96,9 +100,10 @@ DOI = {10.3390/app14198982}
   month        = {April},
   number       = {345},
   type         = {Technical Brochure},
-  note          = {Available: {https://www.e-cigre.org/publications/detail/345-alternating-current-ac-resistance-of-helically-stranded-conductors.html}}}
+  note          = {[Link]({https://www.e-cigre.org/publications/detail/345-alternating-current-ac-resistance-of-helically-stranded-conductors.html})}
+}
 
-  @techreport{cigre531,
+@techreport{cigre531,
   author       = {{CIGRE Working Group B1.30}},
   title        = {Cable Systems Electrical Characteristics},
   institution  = {CIGRE},
@@ -106,7 +111,8 @@ DOI = {10.3390/app14198982}
   month        = {April},
   number       = {531},
   type         = {Technical Brochure},
-  note          = {Available: {https://www.e-cigre.org/publications/detail/531-cable-systems-electrical-characteristics.html}}}
+  note          = {[Link]({https://www.e-cigre.org/publications/detail/531-cable-systems-electrical-characteristics.html})}
+}
 
 @book{rosa1908,
   title     = {The self and mutual-inductances of linear conductors},
@@ -128,8 +134,6 @@ DOI = {10.3390/app14198982}
 	number = {36},
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85218793172&partnerID=40&md5=415867c192cfa930318607b68cd8cd69},
 	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
 }
 
 @book{grover1981inductance,
@@ -141,4 +145,29 @@ DOI = {10.3390/app14198982}
   year={1981},
   publisher={Instrument Society of America}
 }
+
+@techreport{CENELEC50182,
+  type = {Standard},
+  key = {EN 50182:2001},
+  author = {Technical Committee CENELEC TC 7},
+  title = {Conductors for Overhead Lines---Round Wire Concentric Lay Stranded Conductors},
+  institution = {European Committee for Electrotechnical Standardization},
+  year = {2001},
+  isbn   = {0 580 38001 7},
+  pages = {1--73},
+  note = {[Link]({https://www.en-standard.eu/bs-en-50182-2001-conductors-for-overhead-lines-round-wire-concentric-lay-stranded-conductors/})}
+}
+
+@ARTICLE{4389974,
+  author={Oussalah, Naima and Zebboudj, Youcef and Boggs, Steven A.},
+  journal={IEEE Electrical Insulation Magazine}, 
+  title={Partial Discharge Pulse Propagation in Shielded Power Cable and Implications for Detection Sensitivity}, 
+  year={2007},
+  volume={23},
+  number={6},
+  pages={5-10},
+  keywords={Partial discharges;Power cables;Attenuation measurement;Cable shielding;Frequency;Power measurement;Corona;Wideband;Material properties;Software tools},
+  doi={10.1109/MEI.2007.4389974}
+}
+
 
