fix: enhance documentation formatting, improve scrollbar styles, and update examples in .gitignore

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -170,4 +170,12 @@
   doi={10.1109/MEI.2007.4389974}
 }
 
+@techreport{IEC60287,
+  title        = {{IEC 60287} - Electric cables -- Calculation of the current rating},
+  author       = {{IEC technical committee 20: Electric cables}},
+  institution  = {{International Electrotechnical Commission}},
+  year         = {2023},
+  type         = {Standard},
+  note         = {[Link](\url{https://webstore.iec.ch/publication/261})},
+}
 
