fix: update export function to return filename, enhance tutorial clarity, and improve dependency management

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -176,6 +176,29 @@
   institution  = {{International Electrotechnical Commission}},
   year         = {2023},
   type         = {Standard},
-  note         = {[Link](\url{https://webstore.iec.ch/publication/261})},
+  note         = {[Link]({https://webstore.iec.ch/publication/261})},
 }
 
+@techreport{CENELEC_HD620_S3_2023,
+  type = {Standard},
+  key = {HD 620 S3:2023},
+  author = {Technical Committee CENELEC TC 20},
+  title = {Distribution cables with extruded insulation for rated voltages from 3.6/6 (7.2) kV up to and including 20.8/36 (42) kV},
+  institution = {European Committee for Electrotechnical Standardization},
+  year = {2023},
+  isbn = {978-2-8322-6203-0},
+  pages = {1--150},
+  note = {[Link]({https://standards.iteh.ai/catalog/standards/clc/ac6f2d1f-5ce8-4580-8d64-f40ac82b7125/hd-620-s3-2023})}
+}
+
+@techreport{VDE_DIN_VDE_0276_620_2024,
+  type = {Standard},
+  key = {DIN VDE 0276-620:2024-12},
+  author = {Technical Committee VDE},
+  title = {Distribution cables with extruded insulation for rated voltages from 3.6/6 (7.2) kV up to and including 20.8/36 (42) kV},
+  institution = {VDE},
+  year = {2024},
+  isbn = {978-3-8007-6204-0},
+  pages = {1--120},
+  note = {[Link]({https://www.vde-verlag.de/standards/0200084/din-vde-0276-620-vde-0276-620-2024-12.html})}
+}
