--- a/docs/showcase/slides/index.qmd
+++ b/docs/showcase/slides/index.qmd
@@ -17,15 +17,6 @@ include-in-header:
       "selector": "[data-executable]"
     }
     </script>
-    <script src="https://unpkg.com/thebe@0.8.2/lib/index.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/thebe@0.8.2/lib/thebe.css">
-    <script>
-      window.addEventListener('DOMContentLoaded', () => {
-        if (window.thebe) {
-          try { thebe.bootstrap(); } catch (e) { console.warn('Thebe bootstrap deferred', e); }
-        }
-      });
-    </script>
 ---
 
 # Hello
@@ -44,6 +35,7 @@ After the deck loads, hit **Activate** (Thebe) → Binder spins up a Julia kerne
 
 ```{julia}
 #| thebe: true
+#| eval: false
 # Minimal "computation" to prove execution
 sum(i^2 for i in 1:10), prod(i for i in 1:5)
 ```
@@ -74,6 +66,7 @@ Uncomment and replace with your package to smoke-test imports.
 
 ```{julia}
 #| thebe: true
+#| eval: false
 # using YourPackage
 # YourPackage.versioninfo()
 "ready"
