fix: replace error with Base.error for consistency in error handling

--- a/docs/showcase/showcase.ipynb
+++ b/docs/showcase/showcase.ipynb
@@ -3,18 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff45daf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Conda\n",
-    "Conda.add_channel(\"conda-forge\")\n",
-    "Conda.add(\"rise\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5235c5fe",
    "metadata": {},
    "outputs": [],
@@ -25,8 +13,16 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.11.6",
+   "language": "julia",
+   "name": "julia-1.11"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
