feat(showcase): update showcase notebook to use Plots for visualization

--- a/docs/showcase/showcase.ipynb
+++ b/docs/showcase/showcase.ipynb
@@ -7,8 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Interact\n",
-    "@bind x Slider(1:10)"
+    "using Plots\n",
+    "@manipulate for f in [sin, cos, tan], ϕ in 0:0.05:2π\n",
+    "    x = 0:0.05:4π\n",
+    "    Plots.plot(x, f.(x .+ ϕ))\n",
+    "end"
    ]
   }
  ],
