feat(showcase): add Interact for enhanced visualization interactivity

--- a/docs/showcase/showcase.ipynb
+++ b/docs/showcase/showcase.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Plots\n",
+    "using Plots, Interact\n",
     "@manipulate for f in [sin, cos, tan], ϕ in 0:0.05:2π\n",
     "    x = 0:0.05:4π\n",
     "    Plots.plot(x, f.(x .+ ϕ))\n",
