docs: add NIST DLMF and Vujević et al. references to bibliography

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -1,3 +1,25 @@
+@misc{NIST_DLMF,
+key = {DLMF},
+title = {NIST Digital Library of Mathematical Functions},
+author = {Olver, F. W. J. and Olde Daalhuis, A. B. and Lozier, D. W. and Schneider, B. I. and Boisvert, R. F. and Clark, C. W. and Miller, B. R. and Saunders, B. V. and Cohl, H. S. and McClain, M. A., eds.},
+year = {2025},
+institution = {National Institute of Standards and Technology (NIST)},
+howpublished = {[{https://dlmf.nist.gov/}]({https://dlmf.nist.gov/}), Release 1.2.4 of 2025-03-15},
+url = "https://dlmf.nist.gov/",
+}
+
+@ARTICLE{6897971,
+  author={Vujević, Slavko and Lovrić, Dino and Boras, Vedran},
+  journal={IEEE Transactions on Electromagnetic Compatibility}, 
+  title={High-Accurate Numerical Computation of Internal Impedance of Cylindrical Conductors for Complex Arguments of Arbitrary Magnitude}, 
+  year={2014},
+  volume={56},
+  number={6},
+  pages={1431-1438},
+  keywords={Impedance;Conductors;Approximation methods;Skin effect;Mathematical model;Computational modeling;Large complex arguments;modified Bessel functions;solid cylindrical conductor;tubular cylindrical conductor;Large complex arguments;modified Bessel functions;solid cylindrical conductor;tubular cylindrical conductor},
+  doi={10.1109/TEMC.2014.2352398}}
+
+
 @ARTICLE{5437464,
   author={Papadopoulos, Theofilos A. and Tsiamitros, Dimitrios A. and Papagiannis, Grigoris K.},
   journal={IEEE Transactions on Power Delivery}, 
