fix(refs.bib): correct NIST key

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -5,7 +5,7 @@ author = {Olver, F. W. J. and Olde Daalhuis, A. B. and Lozier, D. W. and Schneid
 year = {2025},
 institution = {National Institute of Standards and Technology (NIST)},
 howpublished = {[{https://dlmf.nist.gov/}]({https://dlmf.nist.gov/}), Release 1.2.4 of 2025-03-15},
-url = "https://dlmf.nist.gov/",
+url = {https://dlmf.nist.gov/},
 }
 
 @ARTICLE{6897971,
@@ -32,17 +32,17 @@ url = "https://dlmf.nist.gov/",
   doi={10.1109/TPWRD.2009.2034797}
 }
 
-@Article{app14198982,
-  AUTHOR = {Riba, Jordi-Roger},
-  TITLE = {The Role of AC Resistance of Bare Stranded Conductors for Developing Dynamic Line Rating Approaches},
-  JOURNAL = {Applied Sciences},
-  VOLUME = {14},
-  YEAR = {2024},
-  NUMBER = {19},
-  ARTICLE-NUMBER = {8982},
-  URL = {https://www.mdpi.com/2076-3417/14/19/8982},
-  ISSN = {2076-3417},
-  DOI = {10.3390/app14198982}
+@ARTICLE{app14198982,
+  author = {Riba, Jordi-Roger},
+  title = {The Role of AC Resistance of Bare Stranded Conductors for Developing Dynamic Line Rating Approaches},
+  journal = {Applied Sciences},
+  volume = {14},
+  year = {2024},
+  number = {19},
+  article-number = {8982},
+  url = {https://www.mdpi.com/2076-3417/14/19/8982},
+  issn = {2076-3417},
+  doi = {10.3390/app14198982}
 }
 
 @ARTICLE{6521501,
