fix(refs.bib): correct citation key format and update author to editor fix(UncertainBessels.jl): update citation format for NIST DLMF reference

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -1,7 +1,7 @@
-@misc{NIST_DLMF,
+@misc{NIST:DLMF,
 key = {DLMF},
 title = {NIST Digital Library of Mathematical Functions},
-author = {Olver, F. W. J. and Olde Daalhuis, A. B. and Lozier, D. W. and Schneider, B. I. and Boisvert, R. F. and Clark, C. W. and Miller, B. R. and Saunders, B. V. and Cohl, H. S. and McClain, M. A., eds.},
+editor = {Olver, F. W. J. and Olde Daalhuis, A. B. and Lozier, D. W. and Schneider, B. I. and Boisvert, R. F. and Clark, C. W. and Miller, B. R. and Saunders, B. V. and Cohl, H. S. and McClain, M. A.},
 year = {2025},
 institution = {National Institute of Standards and Technology (NIST)},
 howpublished = {[{https://dlmf.nist.gov/}]({https://dlmf.nist.gov/}), Release 1.2.4 of 2025-03-15},
